# jamcoin

./: .appveyor.yml  .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  build_test.sh  configure.ac  convert_coinname.sh
.circleci/: config.yml
.devcontainer/: .dockerignore  Dockerfile  Dockerfile-bionic  devcontainer.json  devcontainer.json.old
.dockerimagebuilder/: .dockerignore  Dockerfile-ubuntu  build_image.bat  build_image.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
build_msvc/: README.md
contrib/: README.md  gitian-build.py  install_db4.sh
depends/: README.md  config.guess  config.sub  description.md
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  jamcoin-conf.md  productivity.md  psbt.md  reduce-traffic.md  release-notes-jamcoin.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  jamcoin-cli.1  jamcoin-qt.1  jamcoin-tx.1  jamcoin-wallet.1  jamcoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  (+13 more)
(+256 files in other folders)
